--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </main>
     </div>
 
-    <div class="watermark">Created by Parv Gautam</div>
+    <div class="watermark">Created By Minal Singh</div>
     
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
